--- a/config/sys.config
+++ b/config/sys.config
@@ -1,7 +1,12 @@
 [
-    {auctions, [
-	{auction_id_url, "https://poptape.club/auctioncontrol/"},
-      	{public_id_url, "https://poptape.club/login/validate/"},
+    {auctioneer, [
+	{auctionhouse_url, <<"https://poptape.club/authy/status">>},
+      	{authy_url, <<"https://poptape.club/authy/checkaccess/">>},
+	{rabbitmq, [ 
+	    {host, "localhost"},
+	    {user, <<"poptape-auctions">>},
+	    {pass, <<"6AuRs4hod2Nux9BNKX3QAw9v">>}
+	]},
       	{password, <<"WOOOOO">>}
     ]}
 ].
