RabbitMQ now connected to websockets.

--- a/config/sys.config.example
+++ b/config/sys.config.example
@@ -6,6 +6,7 @@
 	    {host, "localhost"},
 	    {user, <<"username">>},
 	    {pass, <<"supersecretpass">>}
+	    {virtual_host, <<"vhost">>}
 	]}
     ]}
 ].
