--- a/auctioneer/rebar.config
+++ b/auctioneer/rebar.config
@@ -1,18 +1,16 @@
 {erl_opts, [debug_info]}.
 {deps, [
-    {cowboy, "2.9.0"},
-    {amqp_client, "3.11.0"},
-    {hackney, "1.18.1"},
-    {uuid, {git, "https://github.com/okeuday/uuid.git"}},
+    {cowboy, "2.12.0"},
+    {amqp_client, "4.0.3"},
+    {hackney, "1.24.1"},
+    {uuid, {git, "https://github.com/okeuday/uuid.git", {tag,"v2.0.7"}}},
     {jsx, "3.1.0"},
-    {jiffy, "1.1.1"}
+    {jiffy, "1.1.2"}
 ]}.
-{relx, [{release, {dev, "0.1.0"},
-         [auctioneer]},
+{relx, [{release, {auctioneer, "0.2.5"}, [auctioneer]},
         {mode, prod},
         {dev_mode, false},
         {include_erts, true},
-
         {extended_start_script, true}]}.
 {shell, [
   % {config, "config/sys.config"},
